<?xml version="1.0"?>
<package>
  <name>People_counter</name>
  <version>0.0.2</version>
  <description>The oCamS-1CGN-U package</description>

  <maintainer email="withrobot@withrobot.com">Withrobot</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/withrobot/oCamS</url>

  <author email="withrobot@withrobot.com">Withrobot</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_geometry</build_depend>

  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_geometry</run_depend>

  <export>
  </export>
</package>
